Bug: Fixing page shift glitch.

--- a/assets/styles/datastores/record/partials/_shelf-browse.scss
+++ b/assets/styles/datastores/record/partials/_shelf-browse.scss
@@ -228,62 +228,58 @@ $class: 'shelf-browse';
   }
   @include media.breakpoint('xs') {
     grid-template-columns: repeat(3, 1fr);
-    &[data-current-page="0"] {
-      &[data-first-page-difference="1"] {
-        & > li:nth-child(1) {
-          grid-column: 2;
-        }
-        & > li:nth-child(2) {
-          grid-column: 3;
-        }
+    &[data-first-page-difference="1"] {
+      & > li:nth-child(1) {
+        grid-column: 2;
       }
-      &[data-first-page-difference="2"] {
-        & > li:nth-child(1) {
-          grid-column: 3;
-        }
+      & > li:nth-child(2) {
+        grid-column: 3;
+      }
+    }
+    &[data-first-page-difference="2"] {
+      & > li:nth-child(1) {
+        grid-column: 3;
       }
     }
   }
   @include media.breakpoint('sm') {
     grid-template-columns: repeat(5, 1fr);
-    &[data-current-page="0"] {
-      &[data-first-page-difference="1"] {
-        & > li:nth-child(1) {
-          grid-column: 2;
-        }
-        & > li:nth-child(2) {
-          grid-column: 3;
-        }
-        & > li:nth-child(3) {
-          grid-column: 4;
-        }
-        & > li:nth-child(4) {
-          grid-column: 5;
-        }
+    &[data-first-page-difference="1"] {
+      & > li:nth-child(1) {
+        grid-column: 2;
       }
-      &[data-first-page-difference="2"] {
-        & > li:nth-child(1) {
-          grid-column: 3;
-        }
-        & > li:nth-child(2) {
-          grid-column: 4;
-        }
-        & > li:nth-child(3) {
-          grid-column: 5;
-        }
+      & > li:nth-child(2) {
+        grid-column: 3;
       }
-      &[data-first-page-difference="3"] {
-        & > li:nth-child(1) {
-          grid-column: 4;
-        }
-        & > li:nth-child(2) {
-          grid-column: 5;
-        }
+      & > li:nth-child(3) {
+        grid-column: 4;
       }
-      &[data-first-page-difference="4"] {
-        & > li:nth-child(1) {
-          grid-column: 5;
-        }
+      & > li:nth-child(4) {
+        grid-column: 5;
+      }
+    }
+    &[data-first-page-difference="2"] {
+      & > li:nth-child(1) {
+        grid-column: 3;
+      }
+      & > li:nth-child(2) {
+        grid-column: 4;
+      }
+      & > li:nth-child(3) {
+        grid-column: 5;
+      }
+    }
+    &[data-first-page-difference="3"] {
+      & > li:nth-child(1) {
+        grid-column: 4;
+      }
+      & > li:nth-child(2) {
+        grid-column: 5;
+      }
+    }
+    &[data-first-page-difference="4"] {
+      & > li:nth-child(1) {
+        grid-column: 5;
       }
     }
   }
